fixed some spacing, need to align day of and forecasted boxes

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
         </ul>
       </div>
       
-      <h1 class="py-6">5-Day Forecast:</h1>
-      <div class="columns"> 
-        <div class="box column has-text-centered is-one-fifth-tablet">
+      <h1 class="py-4">5-Day Forecast:</h1>
+      <div class="columns is-desktop m-2"> 
+        <div class="box m-2 column has-text-centered">
           <h1>(1/02/2021)</h1>
           <ul>
             <li>Temp: 74.01F</li>
@@ -112,7 +112,7 @@
           </ul>
         </div>
         
-        <div class="box column has-text-centered">
+        <div class="box m-2 column has-text-centered">
           <h1>(1/03/2021)</h1>
           <ul>
             <li>Temp: 74.01F</li>
@@ -122,7 +122,7 @@
           </ul>
         </div>
 
-        <div class="box column has-text-centered">
+        <div class="box m-2 column has-text-centered">
           <h1>(1/04/2021)</h1>
           <ul>
             <li>Temp: 74.01F</li>
@@ -132,7 +132,7 @@
           </ul>
         </div>
 
-        <div class="box column has-text-centered">
+        <div class="box m-2 column has-text-centered">
           <h1>(1/05/2021)</h1>
           <ul>
             <li>Temp: 74.01F</li>
@@ -142,7 +142,7 @@
           </ul>
         </div>
 
-        <div class="box column has-text-centered">
+        <div class="box m-2 column has-text-centered">
           <h1>(1/06/2021)</h1>
           <ul>
             <li>Temp: 74.01F</li>
