added css styling to boxes, added data into all except date

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section>
   
   <div class="columns m-2">
-    <div class="column is-one-third-tablet is-one-quarter-desktop is-full-mobile">
+    <div class="column is-one-quarter-desktop is-one-third-tablet is-full-mobile">
         <form class="border-bottom" id="search-input">
             <label class="label">Search for a City:</label>
             <input id="search-value" class="input" type="text" placeholder="Seattle" />
@@ -40,7 +40,7 @@
 
     </div>
     
-    <div id='forecast' class="column is-two-thirds-tablet is-three-quarters-desktop is-full-mobile m-2">
+    <div id='forecast' class="column is-three-quarters-desktop is-two-thirds-tablet is-full-mobile m-2">
       
       <!-- <div class="box">
         <h1>Seattle (1/01/2021)</h1>
@@ -117,6 +117,7 @@
   </div>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
