created array in local storage to store fav cities, and clear the list with the clear button

--- a/index.html
+++ b/index.html
@@ -25,17 +25,22 @@
   <div class="columns m-2">
     <div class="column is-one-quarter-desktop is-one-third-tablet is-full-mobile">
         <form class="border-bottom" id="search-input">
-            <label class="label">Search for a City:</label>
-            <input id="search-value" class="input" type="text" placeholder="Seattle" />
-            <button class="button is-primary is-fullwidth my-2">Search</button>
+          <label class="label">Search for a City:</label>
+          <input id="search-value" class="input" type="text" placeholder="Seattle"/>
+          <button class="button is-primary is-fullwidth my-2">Search</button>
         </form>
-        
+          
         <div>
-          <button class="button is-dark is-fullwidth my-2" data-city="San Diego">San Diego</button>
-          <button class="button is-dark is-fullwidth my-2" data-city="San Diego">Seattle</button>
-          <button class="button is-dark is-fullwidth my-2" data-city="San Diego">Everett</button>
-          <button class="button is-dark is-fullwidth my-2" data-city="San Diego">Bellingham</button>
-          <button class="button is-dark is-fullwidth my-2" data-city="San Diego">Spokane</button>
+          <button class="button save-btn is-dark is-fullwidth my-2">Save</button>
+          <button class="button clear-btn is-light is-fullwidth my-2">Clear Saved</button> 
+        </div>
+
+        <div id="saved">
+          <button class="button is-primary is-light is-fullwidth my-2" data-city="San Diego">San Diego1</button>
+          <button class="button is-primary is-light is-fullwidth my-2" data-city="San Diego">San Diego2</button>
+          <button class="button is-primary is-light is-fullwidth my-2" data-city="San Diego">San Diego3</button>
+          <button class="button is-primary is-light is-fullwidth my-2" data-city="San Diego">San Diego4</button>
+          <button class="button is-primary is-light is-fullwidth my-2" data-city="San Diego">San Diego5</button>
         </div>
 
     </div>
