added bottom border to save and clear button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <button class="button is-primary is-fullwidth my-2">Search</button>
         </form>
           
-        <div>
+        <div class="border-bottom">
           <button class="button save-btn is-dark is-fullwidth my-2">Save</button>
           <button class="button clear-btn is-light is-fullwidth my-2">Clear Saved</button> 
         </div>
