buttons are rendered for saved cities, buttons are cleared with clear btn, list renders on page load and/or on save button click

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         </div>
 
         <div id="saved">
-          <button class="button is-primary is-light is-fullwidth my-2" data-city="San Diego">San Diego1</button>
+          <!-- <button class="button is-primary is-light is-fullwidth my-2" data-city="San Diego">San Diego1</button>
           <button class="button is-primary is-light is-fullwidth my-2" data-city="San Diego">San Diego2</button>
           <button class="button is-primary is-light is-fullwidth my-2" data-city="San Diego">San Diego3</button>
           <button class="button is-primary is-light is-fullwidth my-2" data-city="San Diego">San Diego4</button>
-          <button class="button is-primary is-light is-fullwidth my-2" data-city="San Diego">San Diego5</button>
+          <button class="button is-primary is-light is-fullwidth my-2" data-city="San Diego">San Diego5</button> -->
         </div>
 
     </div>
