refactored favcity to be single saved object in LS, then render on init. favCityList on save button changed to search history, saved on form submit instead

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           
         <div class="border-bottom">
           <button class="button save-btn is-dark is-fullwidth my-2">Save</button>
-          <button class="button clear-btn is-light is-fullwidth my-2">Clear Saved</button> 
+          <button class="button clear-btn is-light is-fullwidth my-2">Clear History</button> 
         </div>
 
         <div id="saved"></div>
